# tet-tasks

./: .gitignore  .pre-commit-config.yaml
task_1/: pyproject.toml  task_1.py  test_task_1.py
task_2/: pyproject.toml  requirements.txt  task.py
task_3/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
task_3/src/presence_calculator/: calculator.py
task_3/src/presence_calculator/api/: app.py
task_3/tests/: conftest.py  test_api.py  test_calculator.py
