[tool.poetry]
name = "task_1"
version = "0.1.0"
description = ""
authors = ["Simon Weiss <python@simonweiss.space>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
