[tool.poetry]
name = "task_2"
version = "0.1.0"
description = ""
authors = ["Simon Weiss <wonder@simonweiss.space>"]

[tool.poetry.dependencies]
python = "^3.9"
Wikipedia-API = "^0.5.4"
pymorphy2 = "^0.9.1"
pymorphy2-dicts-ru = "^2.4.417127"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
ptpython = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
